--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,31 +2,11 @@
 
 <h1>Customers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Full name</th>
-      <th>Phone number</th>
-      <th>Email address</th>
-      <th>Notes</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= customer.full_name %></td>
-        <td><%= customer.phone_number %></td>
-        <td><%= customer.email_address %></td>
-        <td><%= customer.notes %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="search-results columns is-multiline">
+  <%= render partial: 'customers/customer',
+             collection: @customers,
+             locals: { show_link: true } %>
+</div>
 
 <br>
 
