Add 3 actions and views

--- a/app/views/customers/missing_email.html.erb
+++ b/app/views/customers/missing_email.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-  <h1>Customers</h1>
+  <h1>Customers with missing email address</h1>
 
   <div class="search-results columns is-multiline">
     <%= render partial: 'customers/customer',
@@ -7,6 +7,3 @@
               locals: { show_link: true } %>
   </div>
 </div>
-
-
-
