--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-  <h1>Customers</h1>
+  <h1>Customers ordered by alphabetic</h1>
 
   <div class="search-results columns is-multiline">
     <%= render partial: 'customers/customer',
@@ -7,6 +7,4 @@
               locals: { show_link: true } %>
   </div>
 </div>
-
-
 
