Use customer partial in show page

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,24 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Full name:</strong>
-  <%= @customer.full_name %>
-</p>
 
-<p>
-  <strong>Phone number:</strong>
-  <%= @customer.phone_number %>
-</p>
-
-<p>
-  <strong>Email address:</strong>
-  <%= @customer.email_address %>
-</p>
-
-<p>
-  <strong>Notes:</strong>
-  <%= @customer.notes %>
-</p>
+    <%= render partial: 'customers/customer', object: @customer %>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
 <%= link_to 'Back', customers_path %>
