--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -3,8 +3,7 @@
 
   <div class="search-results columns is-multiline">
     <%= render partial: 'customers/customer',
-              collection: @customers,
-              locals: { show_link: true } %>
+              collection: @customers %>
   </div>
 </div>
 
